--- a/projeto-923/index.html
+++ b/projeto-923/index.html
@@ -1,100 +1,85 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adoção de Cachorro</title>
   <link rel="stylesheet" href="stely.css">
+
 </head>
 <body>
 
-  <!-- Cabeçalho -->
   <header>
     <div class="logo">Adoção de Cachorro</div>
     <nav>
       <ul>
         <li><a href="#" class="ativo">Início</a></li>
-        <li><a href="#sobre">Sobre</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Seção principal -->
-  <section class="hero-section">
-    <h1>Adote um Amigo Fiel 🐶</h1>
-    <p>Dê amor e um lar a um cachorro que precisa de você.</p>
-    <a href="#cachorros" class="btn">Conheça os Cães</a>
-  </section>
-
-  <!-- Imagem de destaque -->
   <section id="cachorros" class="produto-section">
     <h2>Cachorros Disponíveis para Adoção</h2>
+
     <div class="produtos">
+
       <div class="produto-card">
-        <img src="logo-Cachorro.png" alt="Cachorro para adoção" width="100%" height="auto">
+        <img src="vira.jpeg" alt="Rex">
         <h3>Rex</h3>
         <p>Idade: 2 anos • Raça: Vira-lata</p>
         <button class="btn-adotar">Adotar</button>
       </div>
-    </div>
 
-  <section id="cachorros" class="produto-section">
-    <div class="produtos">
       <div class="produto-card">
-        <img src="pastor-alema.jpeg" alt="Cachorro para adoção" width="100%" height="auto">
+        <img src="pastor-alema.jpeg" alt="Nino">
         <h3>Nino</h3>
-        <p>Idade: 2 anos • Raça: Pastor-alemã</p>
+        <p>Idade: 2 anos • Raça: Pastor Alemão</p>
         <button class="btn-adotar">Adotar</button>
       </div>
-    </div>
-  
-  <section id="cachorros" class="produto-section">
-    <div class="produtos">
+
       <div class="produto-card">
-        <img src="buldogue-frances.jpeg" alt="Cachorro para adoção" width="100%" height="auto">
+        <img src="buldogue-frances.jpeg" alt="Diamante Negro">
         <h3>Diamante Negro</h3>
         <p>Idade: 2 meses • Raça: Buldogue</p>
         <button class="btn-adotar">Adotar</button>
       </div>
-    </div>
 
-<section id="cachorros" class="produto-section">
-  <div class="produtos">
-    <div class="produto-card">
-      <img src="cachorro.webp" alt="Cachorro para adoção" width="100%" height="auto">
-      <h3>Sem nome</h3>
-      <p>Idade: 3 meses • Raça: Labrador retriever</p>
-      <button class="btn-adotar">Adotar</button>
-    </div>
-  </div>
-
-  <section id="cachorros" class="produto-section">
-    <div class="produtos">
       <div class="produto-card">
-        <img src="duchi.jpeg" alt="Cachorro para adoção" width="100%" height="auto">
-        <h3>Sem nome</h3>
+        <img src="caca.jpeg" alt="Labrador">
+        <h3>Lulu</h3>
+        <p>Idade: 3 meses • Raça: Labrador</p>
+        <button class="btn-adotar">Adotar</button>
+      </div>
+
+      <div class="produto-card">
+        <img src="duchi.jpeg" alt="Dachshund">
+        <h3>fred</h3>
         <p>Idade: 4 meses • Raça: Dachshund</p>
         <button class="btn-adotar">Adotar</button>
       </div>
+
     </div>
   </section>
-</section>
-  
 
-  
+  <section class="contato-section" id="contato">
+    <div class="contato-container">
+      <h2>Entre em Contato</h2>
+      <p>Preencha o formulário abaixo e nós retornaremos o mais rápido possível.</p>
+      <form class="contato-form">
+        <input type="text" name="nome" placeholder="Seu Nome" required>
+        <input type="email" name="email" placeholder="Seu E-mail" required>
+        <textarea name="mensagem" rows="5" placeholder="Sua Mensagem" required></textarea>
+        <button type="submit" class="btn-enviar">Enviar</button>
+      </form>
+    </div>
+  </section>
+
   <footer>
     <p>&copy; 2025 Adoção de Cachorro. Todos os direitos reservados.</p>
   </footer>
 
-  
-  <script>
-    document.querySelectorAll('.btn-adotar').forEach(botao => {
-      botao.addEventListener('click', () => {
-        alert('🐾 Obrigado por querer adotar! Entraremos em contato em breve.');
-      });
-    });
-  </script>
+  <script src="interação.js"></script>
 
 </body>
 </html>
